# helpdesk-client

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
helpdesk_client/: enums.py  exceptions.py  types_.py  utils.py
helpdesk_client/v3/: __init__.py  client.py  dto.py  urls.py
helpdesk_client/v3/schemas/: __init__.py  body.py  pagination.py  query_params.py  response.py
